[package]
name = "dynja"
version = "0.1.0"
edition = "2021"
description = "Jinja pseudo-engine focused on DevEx and Performance"
readme = "README.md"
homepage = "https://github.com/rdbo/dynja"
repository = "https://github.com/rdbo/dynja"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", default-features = true }
dynja_derive = { version = "0.1", path = "../dynja_derive" }
minijinja = { version = "1.0", features = ["loader"] }
