[package]
name = "dynja_derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for dynja"
readme = "README.md"
homepage = "https://github.com/rdbo/dynja"
repository = "https://github.com/rdbo/dynja"
license = "AGPL-3.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1"
syn = { version = "2", features = ["full"] }
