[package]
name = "dynja_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
dynja = { version = "0.1", path = "../dynja" }
