[package]
name = "dynja_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynja = { path = "../dynja" }
askama = { version = "0.12", optional = true }

[features]
default = ["askama_release"]
askama_release = ["dynja/askama_release", "dep:askama"]
